# cpp-open

./: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt  vcpkg.json
src/: main.cpp
src/simple/: person.cpp  person.h
